--- a/.github/workflows/build-index.yml
+++ b/.github/workflows/build-index.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: true
+          lfs: true
 
       - name: Setup Node
         uses: actions/setup-node@v4
